Closed Bug 344939 Opened 19 years ago Closed 19 years ago

Template crashes with javascript nsIXULTemplateResult implementation

Categories

(Core :: XUL, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bugz, Assigned: bugz)

Details

Attachments

(1 file, 2 obsolete files)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060715 Firefox/3.0a1 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060715 Firefox/3.0a1 Template code cast objects from nsISimpleEnumerator instead calling QI on its. This causes crashes when used with XPConnect wrappers. Reproducible: Always
Attached patch v1 (obsolete) — Splinter Review
This patch fixes this problem for me.
Attachment #229487 - Flags: review?(enndeakin)
Comment on attachment 229487 [details] [diff] [review] v1 OK, but please also change the similar call in nsXULTreeBuilder::OpenSubtreeForQuerySet
Attachment #229487 - Flags: review?(enndeakin) → review+
Attached patch v2 (obsolete) — Splinter Review
This adds similar change to nsXULTreeBuilder::OpenSubtreeForQuerySet
Attachment #229487 - Attachment is obsolete: true
Attachment #229501 - Flags: review+
Attachment #229501 - Flags: superreview?(bzbarsky)
Comment on attachment 229501 [details] [diff] [review] v2 >Index: content/xul/templates/src/nsXULContentBuilder.cpp >+ nsCOMPtr<nsIXULTemplateResult> nextresult = do_QueryInterface(nr, &rv); Why bother with rv if you don't use it? Same in the other spot. sr=bzbarsky with that fixed. Please let me know if you need this checked in, ok?
Attachment #229501 - Flags: superreview?(bzbarsky) → superreview+
Assignee: jag → prefiks
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attached patch v3Splinter Review
Review comment fixes. I will very appreciate if you could check it in.
Attachment #229501 - Attachment is obsolete: true
Attachment #229506 - Flags: superreview+
Attachment #229506 - Flags: review+
Checked in. Thanks for the fix!
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Why does class nsGetterAddRefs<T> have an nsISupports**() operator anyway?
Good question! Worth filing a bug on XPCOM over, maybe (and ccing dbaron and biesi).
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: