QI instead of casting so JS-implemented results work right.  Bug 344939, patch by Pawel Chmielowski <prefiks@aviary.pl>, r=enndeakin, sr=bzbarsky