content/xul/templates/src/nsXULContentBuilder.cpp
@@ -1280,11 +1280,15 @@ nsXULContentBuilder::CreateContainerContentsForQuerySet(nsIContent* aElement,
     rv = results->HasMoreElements(&hasMoreResults);
 
     for (; NS_SUCCEEDED(rv) && hasMoreResults;
-           rv = results->HasMoreElements(&hasMoreResults)){
-        nsCOMPtr<nsIXULTemplateResult> nextresult;
-        rv = results->GetNext(getter_AddRefs(nextresult));
+           rv = results->HasMoreElements(&hasMoreResults)) {
+        nsCOMPtr<nsISupports> nr;
+        rv = results->GetNext(getter_AddRefs(nr));
         if (NS_FAILED(rv))
             return rv;
+
+        nsCOMPtr<nsIXULTemplateResult> nextresult = do_QueryInterface(nr);
+        if (!nextresult)
+            return NS_ERROR_UNEXPECTED;
 
         nsCOMPtr<nsIRDFResource> resultid;
         rv = GetResultResource(nextresult, getter_AddRefs(resultid));
